my first commit for react project

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   height: 40vmin;
   pointer-events: none;
 }
+.header{
+  color: #61dafb;
+  justify-content: center;
+  display: flex;
+  font-size: 26px;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
